<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.eric.phoneauction.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_login_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_login2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentEnd="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/ic_login2"
            app:lottie_speed="0.7"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/constraint_login_down" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_login_title"
            android:layout_width="180dp"
            android:layout_height="90dp"
            app:lottie_rawRes="@raw/welcome"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:layout_constraintStart_toStartOf="@+id/lottie_login2"
            app:layout_constraintEnd_toEndOf="@+id/lottie_login2"
            app:layout_constraintTop_toTopOf="@id/lottie_login2"
            app:layout_constraintBottom_toBottomOf="@+id/lottie_login2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_login_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/facebook_login_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button_fb"
                android:fontFamily="@font/roboto_bold"
                android:text="使用 Facebook 登入"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view_loading_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.3"
            android:visibility="gone"
            android:background="@color/gary757575"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <ProgressBar
            android:id="@+id/progress_bar_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/ProgressTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>