<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.eric.phoneauction.auctionDialog.AuctionViewModel" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="@{() -> viewModel.leave()}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="267dp"
            android:onClick="@{() -> viewModel.nothing()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/text_auction_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/noto_sans"
                android:letterSpacing="0.15"
                android:maxLines="1"
                android:text="目前金額"
                android:textColor="@color/gary757575"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/text_auction_price"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_auction_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:letterSpacing="0.15"
                android:maxLines="1"
                android:textColor="@color/gary757575"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_auction_title"
                app:layout_constraintTop_toTopOf="@id/text_auction_title"
                app:price="@{viewModel.event.price}"
                tools:text="NT$3,990" />

            <TextView
                android:id="@+id/text_auction_your_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:letterSpacing="0.15"
                android:maxLines="1"
                android:text="你的出價金額"
                android:layout_marginTop="12dp"
                android:textColor="@color/black212121"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/text_auction_title"
                app:layout_constraintBottom_toTopOf="@id/text_auction_nt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/text_auction_nt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_bold"
                android:text="NT$"
                android:textColor="@{Integer.valueOf(viewModel.event.price) > viewModel.price ? @color/red_d0021b  : @color/black212121  }"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/text_auction_low"
                app:layout_constraintEnd_toStartOf="@+id/edit_auction_price"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_auction_your_price"
                tools:layout_editor_absoluteY="85dp" />


            <EditText
                android:id="@+id/edit_auction_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_bold"
                android:inputType="number"
                android:text="@={`` + viewModel.price}"
                android:textColor="@{Integer.valueOf(viewModel.event.price) > viewModel.price ? @color/red_d0021b  : @color/black212121  }"
                android:textSize="30dp"
                android:textStyle="bold"
                app:backgroundTint="@android:color/transparent"
                app:layout_constraintBaseline_toBaselineOf="@id/text_auction_nt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/text_auction_nt" />

            <TextView
                android:id="@+id/text_auction_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:letterSpacing="0.15"
                android:maxLines="1"
                android:text="低於目前出價金額"
                android:textColor="@color/red_d0021b"
                android:textSize="14sp"
                android:visibility="@{Integer.valueOf(viewModel.event.price) > viewModel.price ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_auction_nt" />

            <View
                android:layout_width="76.5dp"
                android:layout_height="31.5dp"
                android:background="@drawable/button_price"
                app:layout_constraintBottom_toBottomOf="@id/button_auction_minimal"
                app:layout_constraintEnd_toEndOf="@id/button_auction_minimal"
                app:layout_constraintStart_toStartOf="@id/button_auction_minimal"
                app:layout_constraintTop_toTopOf="@id/button_auction_minimal" />

            <Button
                android:id="@+id/button_auction_minimal"
                style="@style/AuctionRippleButton"
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/noto_sans"
                android:letterSpacing="0.15"
                android:onClick="@{() -> viewModel.addMinimalPrice(Integer.valueOf(viewModel.event.price))}"
                android:text="最低出價"
                android:textColor="@color/black212121"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/button_auction_post"
                app:layout_constraintEnd_toStartOf="@+id/button_auction_100"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_auction_low" />

            <View
                android:id="@+id/view"
                android:layout_width="76.5dp"
                android:layout_height="31.5dp"
                android:background="@drawable/button_price"
                app:layout_constraintBottom_toBottomOf="@id/button_auction_100"
                app:layout_constraintEnd_toEndOf="@id/button_auction_100"
                app:layout_constraintStart_toStartOf="@id/button_auction_100"
                app:layout_constraintTop_toTopOf="@id/button_auction_100" />

            <Button
                android:id="@+id/button_auction_100"
                style="@style/AuctionRippleButton"
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:fontFamily="@font/noto_sans"
                android:letterSpacing="0.15"
                android:onClick="@{() -> viewModel.add100()}"
                android:text="加$100"
                android:textColor="@color/black212121"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/button_auction_minimal"
                app:layout_constraintEnd_toStartOf="@+id/button_auction_300"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_auction_minimal" />

            <View
                android:layout_width="76.5dp"
                android:layout_height="31.5dp"
                android:background="@drawable/button_price"
                app:layout_constraintBottom_toBottomOf="@id/button_auction_300"
                app:layout_constraintEnd_toEndOf="@id/button_auction_300"
                app:layout_constraintStart_toStartOf="@id/button_auction_300"
                app:layout_constraintTop_toTopOf="@id/button_auction_300" />

            <Button
                android:id="@+id/button_auction_300"
                style="@style/AuctionRippleButton"
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:fontFamily="@font/noto_sans"
                android:letterSpacing="0.15"
                android:onClick="@{() -> viewModel.add300()}"
                android:text="加$300"
                android:textColor="@color/black212121"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/button_auction_minimal"
                app:layout_constraintEnd_toStartOf="@+id/button_auction_500"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_auction_100" />

            <View
                android:layout_width="76.5dp"
                android:layout_height="31.5dp"
                android:background="@drawable/button_price"
                app:layout_constraintBottom_toBottomOf="@id/button_auction_500"
                app:layout_constraintEnd_toEndOf="@id/button_auction_500"
                app:layout_constraintStart_toStartOf="@id/button_auction_500"
                app:layout_constraintTop_toTopOf="@id/button_auction_500" />

            <Button
                android:id="@+id/button_auction_500"
                style="@style/AuctionRippleButton"
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:fontFamily="@font/noto_sans"
                android:letterSpacing="0.15"
                android:onClick="@{() -> viewModel.add500()}"
                android:text="加$500"
                android:textColor="@color/black212121"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/button_auction_minimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_auction_300" />

            <Button
                android:id="@+id/button_auction_post"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@{viewModel.price &lt;= Integer.valueOf(viewModel.event.price) ? @drawable/button_false : @drawable/button}"
                android:clickable="@{viewModel.price &lt;= Integer.valueOf(viewModel.event.price) ? false : true}"
                android:ellipsize="end"
                android:fontFamily="@font/noto_sans"
                android:letterSpacing="0.15"
                android:onClick="@{() -> viewModel.navigateToCheckoutSuccess(viewModel.event)}"
                android:text="我要出價"
                android:textColor="@android:color/white"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>