<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.eric.phoneauction.checkout.CheckoutSuccessViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/image_checkout_success"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            app:lottie_rawRes="@raw/checkmark"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/text_checkout_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="出價成功"
            android:fontFamily="@font/noto_sans"
            android:textSize="25sp"
            android:textColor="@color/black_3f3a3a"
            android:letterSpacing="0.15"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/image_checkout_success"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="請隨時關注您競標的商品。"
            android:fontFamily="@font/noto_sans"
            android:textSize="15sp"
            android:textColor="@color/black_3f3a3a"
            android:letterSpacing="0.15"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/text_checkout_success"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_checkout_success_bottom"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/button_checkout_success_shopping"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:letterSpacing="0.15"
                android:text="再去逛逛"
                android:onClick="@{() -> viewModel.navigateToHome()}"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:background="@drawable/button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>